@@ -15,9 +15,11 @@ Bug fixes:
 - #852 : make logged_in more customizable
 - Fix for 3.2 migration
 - #914 : Existing instances of 'News' document type are broken.
--  #685 : when publishing a content, a wrarning should be raised if no section is chosen
+-  #685 : when publishing a content, a warning should be raised if no section is chosen
 - revert [27616]
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Small refactoring of folder_localrole_edit.py to move setting `reindex` out
   of loop.
+- Added the printLogErrors method to CPSTestCase to be able to get ZLOG logs
+  when running unit tests.
